--- a/templates/index.html
+++ b/templates/index.html
@@ -6,28 +6,46 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
- <!-- date picker -->
+    <!--  jQuery -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"/>
 
+    <!-- date picker -->
+    <script type="text/javascript">
+        // When the document is ready
+        $(document).ready(function () {
+        
+        $('#example1').datepicker({
+            format: "dd/mm/yyyy"
+        });
+        
+        });
+        </script>
 <title>Document</title>
-    <style>
-        .container{
-            background: lightgrey;
-            }
-        .navcont{
-            padding: 0px;
+
+<style>
+    .container{
+        background: lightgrey;
         }
-        #pwhelper{
-            text-indent: 5px;
-        }
-        .card-footer{
-            border:none;           
-            border-radius: 0px 0px 6px 6px;
-        }
-        #message2, #message1{
-            max-width: 200px; 
-            display: inline;
-        }
-    </style>
+    .navcont{
+        padding: 0px;
+    }
+    #pwhelper{
+        text-indent: 5px;
+    }
+    .card-footer{
+        border:none;           
+        border-radius: 0px 0px 6px 6px;
+    }
+    #message2, #message1{
+        max-width: 200px; 
+        display: inline;
+    }
+</style>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </head>
 <body>
 <!-- nav -->
@@ -71,35 +89,43 @@
         {% if messages %}
           <ul class=flashes>
           {% for category, message in messages %}
-            <li class="{{ category }}">{{ message }}</li>
+            <li class={{category}}>{{ message }}</li>
           {% endfor %}
           </ul>
         {% endif %}
       {% endwith %}
             
-     
+      
 <!-- start form -->
-    <form action="submit" method="POST" >
-    <div class="form-row align-items-center">
-        <div class="col-auto">
-            <input type="text" class="form-control mb-2" placeholder= "First Name" name="first_name"required maxlength="25" 
-            value = {{first_name}} >
-        </div>
-        <div class="col-auto">
-            <input type="text" class="form-control mb-2"placeholder= "Last Name" name="last_name" required maxlength="50" 
-            value = {{last_name}}>
-        </div>               
-    </div>
-    <div class="form-row">
-        <div class="col-auto">
-            <input type="text" class="form-control form-control-md mb-2" placeholder= "Email" name="email" required maxlength="65" 
-            value = {{email}}>
-        </div>
-    </div>
-
-     <span id='message1'></span>
-
-    <div class="form-row">
+      <form action="submit" method="POST" >
+          <div class="form-row align-items-center">
+              <div class="col-auto">
+                  <input type="text" class="form-control mb-2" placeholder= "First Name" name="first_name"required maxlength="25" 
+                  value = {{first_name}} >
+                </div>
+                <div class="col-auto">
+                    <input type="text" class="form-control mb-2"placeholder= "Last Name" name="last_name" required maxlength="50" 
+                    value = {{last_name}}>
+                </div>               
+            </div>
+<!-- date picker -->
+            <div class="form-row align-items-center">
+                <div class="col-auto">
+                    <small  class="text-muted">Birthdate</small>
+                    <input class="form-control mb-4" id="date" name="date" placeholder="mm/dd/yyyy" type="text"/>
+                </div>               
+            </div>               
+<!-- email -->
+            <div class="form-row">
+                <div class="col-auto">
+                    <input type="text" class="form-control form-control-md mb-2" placeholder= "Email" name="email" required maxlength="65" 
+                    value = {{email}}>
+                </div>
+            </div>
+            
+            <span id='message1'></span>
+            
+            <div class="form-row">
         <div class="col-sm-4">
             <small  class="text-muted">Must contain at least 12 characters</small>
             <input id ="password" name ="password" type="password" class="mb-2 form-control-sm" placeholder="Password" minlength="12" required title="Must contain at least 12 characters">
@@ -111,22 +137,19 @@
             <input id ="confirm_password" name ="confirm_password" type="password" class="mb-4 form-control-sm" placeholder="Confirm Password" minlength="12" required title="Must contain at least 12 characters">
         </div>
     </div>
-<!-- button -->
+
+
+    <!-- button -->
             <div class="submit">
             <button type="submit" class="btn btn-primary ">Submit</button>
             </div>
-
-<!-- date picker -->
-
 
     </form>
     <br>
     </div>
     <div class="card-footer text-muted container">Created using Bootstrap and Flask</div>
         
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
 <script>
     //  pre-validating pw on stroke up (pre-submit)
 //pw len
